# os

./: Cargo.toml  x86_64-baremetal.json
.cargo/: config
src/: gdt.rs  interrupt.rs  lib.rs  main.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs  stack_overflow.rs
