[package]
name = "os"
version = "0.1.0"
authors = ["Rodrigo Valle <rodrigo.d.valle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.4"
spin = "0.5.2"
uart_16550 = "0.2.0"
volatile = "0.2.6"
x86_64 = "0.11.0"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
# The command invoked with the created bootimage (the "{}" will be replaced
# with the path to the bootable disk image)
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}"]
# Additional arguments passed to the run command for non-test executables
# run-args = []
# Additional arguments passed to the run command for test executables
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-display", "none",
    "-serial", "stdio",
    "-no-reboot",
]
# An exit code that should be considered as success for test executables
test-success-exit-code = 33
# The timeout for running a test (in seconds)
test-timeout = 10  # originally: 300

[[test]]
name = "stack_overflow"
harness = false